change page title

--- a/src/main/resources/templates/customers/list.html
+++ b/src/main/resources/templates/customers/list.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>顧客管理システム</h1>
+    <h1>顧客管理しすてむ</h1>
 
     <div class="col-sm-12">
         <form th:action="@{/customers/create}" th:object="${customerForm}" class="form-horizontal" method="post">
